--- a/dsa/midterm/coursera/week_1/03_standard-library/custom_namespace/CustomNamespace.cbp
+++ b/dsa/midterm/coursera/week_1/03_standard-library/custom_namespace/CustomNamespace.cbp
@@ -32,6 +32,8 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="Cube.cpp" />
+		<Unit filename="Cube.h" />
 		<Unit filename="main.cpp" />
 		<Extensions />
 	</Project>
