--- a/dsa/midterm/coursera/week_3/01_class_custom_default_constructors/Default_Constructors/Default_Constructors.cbp
+++ b/dsa/midterm/coursera/week_3/01_class_custom_default_constructors/Default_Constructors/Default_Constructors.cbp
@@ -32,7 +32,9 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="main.cpp" />
+		<Unit filename="../Cube.cpp" />
+		<Unit filename="../Cube.h" />
+		<Unit filename="../main.cpp" />
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
