--- a/dsa/midterm/coursera/week_3/04_copy_assignment_operator/AssignmentOperator/AssignmentOperator.cbp
+++ b/dsa/midterm/coursera/week_3/04_copy_assignment_operator/AssignmentOperator/AssignmentOperator.cbp
@@ -32,7 +32,9 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="main.cpp" />
+		<Unit filename="../Cube.cpp" />
+		<Unit filename="../Cube.h" />
+		<Unit filename="../main.cpp" />
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
