feat: implemented functionalities

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /oop/semis/exam/PetAdoptionCenter/nbproject/private/
 /oop/semis/exam/PetAdoptionCenter/build/
 /oop/semis/exam/PetAdoptionCenter/dist/
+/oop/finals/activity9/Polymorphism/target/
